// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render out the new document view 1`] = `
<div>
  <div
    class="ui basic vertical segment ui container"
  >
    <div
      class="ui basic vertical segment ui container"
    >
      <h3
        class="ui header"
      >
        Tell us about your document
      </h3>
      <p
        class="text-wrap-75"
      >
        Help us process and harmonize your study faster by categorizing and describing the document you are about to upload. If you have any questions, please contact us at
         
        <a
          href="mailto:support@kidsfirstdrc.org?subject=Kids First Data Tracker Help&body=Hello, I would like to upload a <insert_document_description_here> and am having trouble with the upload function"
        >
          support@kidsfirstdrc.org
        </a>
        .
      </p>
      
    </div>
    <div
      class="ui segments"
    >
      <div
        class="ui segment"
      >
        <h4
          class="ui header"
          title="12"
        >
          Uploaded File: 
          organize.tsv
        </h4>
      </div>
      <div
        class="ui very padded segment ui container"
      >
        <form
          class="ui form"
        >
          <div
            class="required field"
          >
            <label
              for="file_name"
            >
              Document Title:
            </label>
            <input
              data-testid="name-input"
              name="file_name"
              placeholder="Phenotypic Data manifest for..."
              type="text"
              value=""
            />
            <small>
              Please provide a descriptive title without dates or adjectives such as "new", "updated", "final", etc.
            </small>
          </div>
          <div
            class="required field"
          >
            <label
              for="file_type"
            >
              Document Type:
            </label>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="SHM"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="SHM"
                    />
                    <i
                      aria-hidden="true"
                      class="black shipping large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Biospecimen Manifest
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Tabular files (e.g. CSV, TSV, Excel) containing biospecimen identifiers and metadata (e.g. tissue type, composition) provided to sequencing centers as well as consent type.
                  </p>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="CLN"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="CLN"
                    />
                    <i
                      aria-hidden="true"
                      class="black hospital large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Clinical/Phenotypic Data
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Structured files with data linked to the biospecimen identifiers provided in the shipping manifest(s). Exports from data management applications, such as REDCap, are the fastest to process, but we will work with you on most formats.
                  </p>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="SEQ"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="SEQ"
                    />
                    <i
                      aria-hidden="true"
                      class="black dna large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Sequencing Manifest
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Tabular files (e.g. CSV, TSV, Excel) containing the biospecimen identifiers and the associated genomic data files. Typically provided by the sequencing center.
                  </p>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="OTH"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="OTH"
                    />
                    <i
                      aria-hidden="true"
                      class="black question large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Other
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Any useful documents, such as study background information, data dictionaries, etc., that does not clearly fit in the other categories.
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="required field"
          >
            <label>
              Describe Document Contents:
            </label>
            <textarea
              data-testid="description-input"
              name="file_desc"
              rows="3"
              type="text"
            />
          </div>
          <div
            class="ui basic compact vertical segment"
          >
            <button
              class="ui primary disabled right floated button"
              disabled=""
              tabindex="-1"
              type="submit"
            >
              UPLOAD
            </button>
            <button
              class="ui right floated button"
            >
              CANCEL
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render out the new document view 2`] = `
<div>
  <div
    class="ui basic vertical segment ui container"
  >
    <div
      class="ui basic vertical segment ui container"
    >
      <h3
        class="ui header"
      >
        Tell us about your document
      </h3>
      <p
        class="text-wrap-75"
      >
        Help us process and harmonize your study faster by categorizing and describing the document you are about to upload. If you have any questions, please contact us at
         
        <a
          href="mailto:support@kidsfirstdrc.org?subject=Kids First Data Tracker Help&body=Hello, I would like to upload a <insert_document_description_here> and am having trouble with the upload function"
        >
          support@kidsfirstdrc.org
        </a>
        .
      </p>
      
    </div>
    <div
      class="ui segments"
    >
      <div
        class="ui segment"
      >
        <h4
          class="ui header"
          title="12"
        >
          Uploaded File: 
          organize.tsv
        </h4>
      </div>
      <div
        class="ui very padded segment ui container"
      >
        <div
          class="ui small icon info message"
        >
          <i
            aria-hidden="true"
            class="info circle icon"
          />
          <div
            class="content"
          >
            <div
              class="header"
            >
              Update Existing Document Instead?
            </div>
            <span>
              We found  
              <strong>
                1
                  similar document titles  
              </strong>
              in this study.
            </span>
            <details>
              <div
                class="ui list"
                role="list"
              >
                <div
                  class="item"
                  role="listitem"
                >
                  <i
                    aria-hidden="true"
                    class="file icon"
                  />
                  organization.jpeg
                   (
                  3
                   
                  versions)
                </div>
              </div>
            </details>
          </div>
          <button
            class="ui blue right floated button"
          >
            Update Existing Document
          </button>
        </div>
        <form
          class="ui form"
        >
          <div
            class="required field"
          >
            <label
              for="file_name"
            >
              Document Title:
            </label>
            <input
              data-testid="name-input"
              name="file_name"
              placeholder="Phenotypic Data manifest for..."
              type="text"
              value="organization.jp"
            />
            <small>
              Please provide a descriptive title without dates or adjectives such as "new", "updated", "final", etc.
            </small>
          </div>
          <div
            class="required field"
          >
            <label
              for="file_type"
            >
              Document Type:
            </label>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="SHM"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="SHM"
                    />
                    <i
                      aria-hidden="true"
                      class="black shipping large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Biospecimen Manifest
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Tabular files (e.g. CSV, TSV, Excel) containing biospecimen identifiers and metadata (e.g. tissue type, composition) provided to sequencing centers as well as consent type.
                  </p>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="CLN"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="CLN"
                    />
                    <i
                      aria-hidden="true"
                      class="black hospital large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Clinical/Phenotypic Data
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Structured files with data linked to the biospecimen identifiers provided in the shipping manifest(s). Exports from data management applications, such as REDCap, are the fastest to process, but we will work with you on most formats.
                  </p>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="SEQ"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="SEQ"
                    />
                    <i
                      aria-hidden="true"
                      class="black dna large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Sequencing Manifest
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Tabular files (e.g. CSV, TSV, Excel) containing the biospecimen identifiers and the associated genomic data files. Typically provided by the sequencing center.
                  </p>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="OTH"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="OTH"
                    />
                    <i
                      aria-hidden="true"
                      class="black question large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Other
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Any useful documents, such as study background information, data dictionaries, etc., that does not clearly fit in the other categories.
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="required field"
          >
            <label>
              Describe Document Contents:
            </label>
            <textarea
              data-testid="description-input"
              name="file_desc"
              rows="3"
              type="text"
            />
          </div>
          <div
            class="ui basic compact vertical segment"
          >
            <button
              class="ui primary disabled right floated button"
              disabled=""
              tabindex="-1"
              type="submit"
            >
              UPLOAD
            </button>
            <button
              class="ui right floated button"
            >
              CANCEL
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render out the new document view 3`] = `
<div>
  <div
    class="ui basic vertical segment ui container"
  >
    <div
      class="ui basic vertical segment ui container"
    >
      <h3
        class="ui header"
      >
        Tell us about your document
      </h3>
      <p
        class="text-wrap-75"
      >
        Help us process and harmonize your study faster by categorizing and describing the document you are about to upload. If you have any questions, please contact us at
         
        <a
          href="mailto:support@kidsfirstdrc.org?subject=Kids First Data Tracker Help&body=Hello, I would like to upload a <insert_document_description_here> and am having trouble with the upload function"
        >
          support@kidsfirstdrc.org
        </a>
        .
      </p>
      
    </div>
    <div
      class="ui segments"
    >
      <div
        class="ui segment"
      >
        <h4
          class="ui header"
          title="12"
        >
          Uploaded File: 
          organize.tsv
        </h4>
      </div>
      <div
        class="ui very padded segment ui container"
      >
        <div
          class="ui small error icon info message"
        >
          <i
            aria-hidden="true"
            class="info circle icon"
          />
          <div
            class="content"
          >
            <div
              class="header"
            >
              Update Existing Document Instead?
            </div>
            <strong>
              Documents with this name already exist in this study.
            </strong>
            <details>
              <div
                class="ui list"
                role="list"
              >
                <div
                  class="item"
                  role="listitem"
                >
                  <i
                    aria-hidden="true"
                    class="file icon"
                  />
                  organization.jpeg
                   (
                  3
                   
                  versions)
                </div>
              </div>
            </details>
          </div>
          <button
            class="ui blue right floated button"
          >
            Update Existing Document
          </button>
        </div>
        <form
          class="ui form"
        >
          <div
            class="required field"
          >
            <label
              for="file_name"
            >
              Document Title:
            </label>
            <input
              data-testid="name-input"
              name="file_name"
              placeholder="Phenotypic Data manifest for..."
              type="text"
              value="organization.jpeg"
            />
            <small>
              Please provide a descriptive title without dates or adjectives such as "new", "updated", "final", etc.
            </small>
          </div>
          <div
            class="required field"
          >
            <label
              for="file_type"
            >
              Document Type:
            </label>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="SHM"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="SHM"
                    />
                    <i
                      aria-hidden="true"
                      class="black shipping large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Biospecimen Manifest
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Tabular files (e.g. CSV, TSV, Excel) containing biospecimen identifiers and metadata (e.g. tissue type, composition) provided to sequencing centers as well as consent type.
                  </p>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="CLN"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="CLN"
                    />
                    <i
                      aria-hidden="true"
                      class="black hospital large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Clinical/Phenotypic Data
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Structured files with data linked to the biospecimen identifiers provided in the shipping manifest(s). Exports from data management applications, such as REDCap, are the fastest to process, but we will work with you on most formats.
                  </p>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="SEQ"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="SEQ"
                    />
                    <i
                      aria-hidden="true"
                      class="black dna large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Sequencing Manifest
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Tabular files (e.g. CSV, TSV, Excel) containing the biospecimen identifiers and the associated genomic data files. Typically provided by the sequencing center.
                  </p>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="OTH"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="OTH"
                    />
                    <i
                      aria-hidden="true"
                      class="black question large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Other
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Any useful documents, such as study background information, data dictionaries, etc., that does not clearly fit in the other categories.
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="required field"
          >
            <label>
              Describe Document Contents:
            </label>
            <textarea
              data-testid="description-input"
              name="file_desc"
              rows="3"
              type="text"
            />
          </div>
          <div
            class="ui basic compact vertical segment"
          >
            <button
              class="ui primary disabled right floated button"
              disabled=""
              tabindex="-1"
              type="submit"
            >
              UPLOAD
            </button>
            <button
              class="ui right floated button"
            >
              CANCEL
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render out the new document view 4`] = `
<div>
  <div
    class="ui basic vertical segment ui container"
  >
    <div
      class="ui basic vertical segment ui container"
    >
      <h3
        class="ui header"
      >
        Tell us about your document
      </h3>
      <p
        class="text-wrap-75"
      >
        Help us process and harmonize your study faster by categorizing and describing the document you are about to upload. If you have any questions, please contact us at
         
        <a
          href="mailto:support@kidsfirstdrc.org?subject=Kids First Data Tracker Help&body=Hello, I would like to upload a <insert_document_description_here> and am having trouble with the upload function"
        >
          support@kidsfirstdrc.org
        </a>
        .
      </p>
      
    </div>
    <div
      class="ui segments"
    >
      <div
        class="ui segment"
      >
        <h4
          class="ui header"
          title="12"
        >
          Uploaded File: 
          organize.tsv
        </h4>
      </div>
      <div
        class="ui very padded segment ui container"
      >
        <div
          class="ui small error icon info message"
        >
          <i
            aria-hidden="true"
            class="info circle icon"
          />
          <div
            class="content"
          >
            <div
              class="header"
            >
              Update Existing Document Instead?
            </div>
            <strong>
              Documents with this name already exist in this study.
            </strong>
            <details>
              <div
                class="ui list"
                role="list"
              >
                <div
                  class="item"
                  role="listitem"
                >
                  <i
                    aria-hidden="true"
                    class="file icon"
                  />
                  organization.jpeg
                   (
                  3
                   
                  versions)
                </div>
              </div>
            </details>
          </div>
          <button
            class="ui blue right floated button"
          >
            Update Existing Document
          </button>
        </div>
        <form
          class="ui form"
        >
          <div
            class="required field"
          >
            <label
              for="file_name"
            >
              Document Title:
            </label>
            <input
              data-testid="name-input"
              name="file_name"
              placeholder="Phenotypic Data manifest for..."
              type="text"
              value="organization.jpeg"
            />
            <small>
              Please provide a descriptive title without dates or adjectives such as "new", "updated", "final", etc.
            </small>
          </div>
          <div
            class="required field"
          >
            <label
              for="file_type"
            >
              Document Type:
            </label>
            <div
              class="field"
            >
              <div
                class="ui blue compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui checked radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="SHM"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="SHM"
                    />
                    <i
                      aria-hidden="true"
                      class="blue shipping large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Biospecimen Manifest
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Tabular files (e.g. CSV, TSV, Excel) containing biospecimen identifiers and metadata (e.g. tissue type, composition) provided to sequencing centers as well as consent type.
                  </p>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="CLN"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="CLN"
                    />
                    <i
                      aria-hidden="true"
                      class="black hospital large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Clinical/Phenotypic Data
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Structured files with data linked to the biospecimen identifiers provided in the shipping manifest(s). Exports from data management applications, such as REDCap, are the fastest to process, but we will work with you on most formats.
                  </p>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="SEQ"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="SEQ"
                    />
                    <i
                      aria-hidden="true"
                      class="black dna large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Sequencing Manifest
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Tabular files (e.g. CSV, TSV, Excel) containing the biospecimen identifiers and the associated genomic data files. Typically provided by the sequencing center.
                  </p>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="OTH"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="OTH"
                    />
                    <i
                      aria-hidden="true"
                      class="black question large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Other
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Any useful documents, such as study background information, data dictionaries, etc., that does not clearly fit in the other categories.
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="required field"
          >
            <label>
              Describe Document Contents:
            </label>
            <textarea
              data-testid="description-input"
              name="file_desc"
              rows="3"
              type="text"
            >
              description input added
            </textarea>
          </div>
          <div
            class="ui basic compact vertical segment"
          >
            <button
              class="ui primary right floated button"
              type="submit"
            >
              UPLOAD
            </button>
            <button
              class="ui right floated button"
            >
              CANCEL
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render out the new document view 5`] = `
<div>
  <div
    class="ui basic vertical segment ui container"
  >
    <div
      class="ui basic vertical segment ui container"
    >
      <h3
        class="ui header"
      >
        Tell us about your document
      </h3>
      <p
        class="text-wrap-75"
      >
        Help us process and harmonize your study faster by categorizing and describing the document you are about to upload. If you have any questions, please contact us at
         
        <a
          href="mailto:support@kidsfirstdrc.org?subject=Kids First Data Tracker Help&body=Hello, I would like to upload a <insert_document_description_here> and am having trouble with the upload function"
        >
          support@kidsfirstdrc.org
        </a>
        .
      </p>
      
    </div>
    <div
      class="ui segments"
    >
      <div
        class="ui segment"
      >
        <h4
          class="ui header"
          title="12"
        >
          Uploaded File: 
          organize.tsv
        </h4>
      </div>
      <div
        class="ui very padded segment ui container"
      >
        <form
          class="ui form"
        >
          <div
            class="required field"
          >
            <label
              for="file_name"
            >
              Document Title:
            </label>
            <input
              data-testid="name-input"
              name="file_name"
              placeholder="Phenotypic Data manifest for..."
              type="text"
              value=""
            />
            <small>
              Please provide a descriptive title without dates or adjectives such as "new", "updated", "final", etc.
            </small>
          </div>
          <div
            class="required field"
          >
            <label
              for="file_type"
            >
              Document Type:
            </label>
            <div
              class="field"
            >
              <div
                class="ui blue compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui checked radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="SHM"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="SHM"
                    />
                    <i
                      aria-hidden="true"
                      class="blue shipping large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Biospecimen Manifest
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Tabular files (e.g. CSV, TSV, Excel) containing biospecimen identifiers and metadata (e.g. tissue type, composition) provided to sequencing centers as well as consent type.
                  </p>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="CLN"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="CLN"
                    />
                    <i
                      aria-hidden="true"
                      class="black hospital large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Clinical/Phenotypic Data
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Structured files with data linked to the biospecimen identifiers provided in the shipping manifest(s). Exports from data management applications, such as REDCap, are the fastest to process, but we will work with you on most formats.
                  </p>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="SEQ"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="SEQ"
                    />
                    <i
                      aria-hidden="true"
                      class="black dna large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Sequencing Manifest
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Tabular files (e.g. CSV, TSV, Excel) containing the biospecimen identifiers and the associated genomic data files. Typically provided by the sequencing center.
                  </p>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="OTH"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="OTH"
                    />
                    <i
                      aria-hidden="true"
                      class="black question large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Other
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Any useful documents, such as study background information, data dictionaries, etc., that does not clearly fit in the other categories.
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="required field"
          >
            <label>
              Describe Document Contents:
            </label>
            <textarea
              data-testid="description-input"
              name="file_desc"
              rows="3"
              type="text"
            />
          </div>
          <div
            class="ui basic compact vertical segment"
          >
            <button
              class="ui primary disabled right floated button"
              disabled=""
              tabindex="-1"
              type="submit"
            >
              UPLOAD
            </button>
            <button
              class="ui right floated button"
            >
              CANCEL
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render out the new document view 6`] = `
<div>
  <div
    class="ui basic vertical segment ui container"
  >
    <div
      class="ui basic vertical segment ui container"
    >
      <h3
        class="ui header"
      >
        Tell us about your document
      </h3>
      <p
        class="text-wrap-75"
      >
        Help us process and harmonize your study faster by categorizing and describing the document you are about to upload. If you have any questions, please contact us at
         
        <a
          href="mailto:support@kidsfirstdrc.org?subject=Kids First Data Tracker Help&body=Hello, I would like to upload a <insert_document_description_here> and am having trouble with the upload function"
        >
          support@kidsfirstdrc.org
        </a>
        .
      </p>
      <div
        class="ui icon negative message"
      >
        <i
          aria-hidden="true"
          class="warning circle icon"
        />
        <div
          class="content"
        >
          <div
            class="header"
          >
            Error
          </div>
          <p>
            No more mocked responses for the query: mutation CreateFile($file: Upload!, $studyId: String!, $name: String!, $fileType: FileFileType!, $description: String!) {
  createFile(file: $file, studyId: $studyId, name: $name, fileType: $fileType, description: $description) {
    success
    file {
      ...FileFields
      __typename
    }
    __typename
  }
}

fragment FileFields on FileNode {
  id
  kfId
  name
  description
  fileType
  downloadUrl
  __typename
}
, variables: {"file":{"lastModified":1567797130510,"name":"organize.tsv","size":7,"type":"text/tab-separated-values","webkitRelativePath":""},"studyId":"SD_8WX8QQ06","name":"name","fileType":"SHM","description":"description"}
          </p>
        </div>
      </div>
    </div>
    <div
      class="ui segments"
    >
      <div
        class="ui segment"
      >
        <h4
          class="ui header"
          title="12"
        >
          Uploaded File: 
          organize.tsv
        </h4>
      </div>
      <div
        class="ui very padded segment ui container"
      >
        <form
          class="ui form"
        >
          <div
            class="required field"
          >
            <label
              for="file_name"
            >
              Document Title:
            </label>
            <input
              data-testid="name-input"
              name="file_name"
              placeholder="Phenotypic Data manifest for..."
              type="text"
              value="name"
            />
            <small>
              Please provide a descriptive title without dates or adjectives such as "new", "updated", "final", etc.
            </small>
          </div>
          <div
            class="required field"
          >
            <label
              for="file_type"
            >
              Document Type:
            </label>
            <div
              class="field"
            >
              <div
                class="ui blue compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui checked radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="SHM"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="SHM"
                    />
                    <i
                      aria-hidden="true"
                      class="blue shipping large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Biospecimen Manifest
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Tabular files (e.g. CSV, TSV, Excel) containing biospecimen identifiers and metadata (e.g. tissue type, composition) provided to sequencing centers as well as consent type.
                  </p>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="CLN"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="CLN"
                    />
                    <i
                      aria-hidden="true"
                      class="black hospital large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Clinical/Phenotypic Data
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Structured files with data linked to the biospecimen identifiers provided in the shipping manifest(s). Exports from data management applications, such as REDCap, are the fastest to process, but we will work with you on most formats.
                  </p>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="SEQ"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="SEQ"
                    />
                    <i
                      aria-hidden="true"
                      class="black dna large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Sequencing Manifest
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Tabular files (e.g. CSV, TSV, Excel) containing the biospecimen identifiers and the associated genomic data files. Typically provided by the sequencing center.
                  </p>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="OTH"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="OTH"
                    />
                    <i
                      aria-hidden="true"
                      class="black question large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Other
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Any useful documents, such as study background information, data dictionaries, etc., that does not clearly fit in the other categories.
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="required field"
          >
            <label>
              Describe Document Contents:
            </label>
            <textarea
              data-testid="description-input"
              name="file_desc"
              rows="3"
              type="text"
            >
              description
            </textarea>
          </div>
          <div
            class="ui basic compact vertical segment"
          >
            <button
              class="ui right floated button"
              type="submit"
            >
              UPLOAD
            </button>
            <button
              class="ui primary right floated button"
            >
              CANCEL
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render out the new document view 7`] = `
<div>
  <div
    class="ui basic vertical segment ui container"
  >
    <div
      class="ui basic vertical segment ui container"
    >
      <h3
        class="ui header"
      >
        Tell us about your document
      </h3>
      <p
        class="text-wrap-75"
      >
        Help us process and harmonize your study faster by categorizing and describing the document you are about to upload. If you have any questions, please contact us at
         
        <a
          href="mailto:support@kidsfirstdrc.org?subject=Kids First Data Tracker Help&body=Hello, I would like to upload a <insert_document_description_here> and am having trouble with the upload function"
        >
          support@kidsfirstdrc.org
        </a>
        .
      </p>
      <div
        class="ui icon negative message"
      >
        <i
          aria-hidden="true"
          class="warning circle icon"
        />
        <div
          class="content"
        >
          <div
            class="header"
          >
            Error
          </div>
          <p>
            No more mocked responses for the query: mutation CreateFile($file: Upload!, $studyId: String!, $name: String!, $fileType: FileFileType!, $description: String!) {
  createFile(file: $file, studyId: $studyId, name: $name, fileType: $fileType, description: $description) {
    success
    file {
      ...FileFields
      __typename
    }
    __typename
  }
}

fragment FileFields on FileNode {
  id
  kfId
  name
  description
  fileType
  downloadUrl
  __typename
}
, variables: {"file":{"lastModified":1567797130510,"name":"organize.tsv","size":7,"type":"text/tab-separated-values","webkitRelativePath":""},"studyId":"SD_8WX8QQ06","name":"name","fileType":"SHM","description":"description"}
          </p>
        </div>
      </div>
    </div>
    <div
      class="ui segments"
    >
      <div
        class="ui segment"
      >
        <h4
          class="ui header"
          title="12"
        >
          Uploaded File: 
          organize.tsv
        </h4>
      </div>
      <div
        class="ui very padded segment ui container"
      >
        <form
          class="ui form"
        >
          <div
            class="required field"
          >
            <label
              for="file_name"
            >
              Document Title:
            </label>
            <input
              data-testid="name-input"
              name="file_name"
              placeholder="Phenotypic Data manifest for..."
              type="text"
              value="name"
            />
            <small>
              Please provide a descriptive title without dates or adjectives such as "new", "updated", "final", etc.
            </small>
          </div>
          <div
            class="required field"
          >
            <label
              for="file_type"
            >
              Document Type:
            </label>
            <div
              class="field"
            >
              <div
                class="ui blue compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui checked radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="SHM"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="SHM"
                    />
                    <i
                      aria-hidden="true"
                      class="blue shipping large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Biospecimen Manifest
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Tabular files (e.g. CSV, TSV, Excel) containing biospecimen identifiers and metadata (e.g. tissue type, composition) provided to sequencing centers as well as consent type.
                  </p>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="CLN"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="CLN"
                    />
                    <i
                      aria-hidden="true"
                      class="black hospital large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Clinical/Phenotypic Data
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Structured files with data linked to the biospecimen identifiers provided in the shipping manifest(s). Exports from data management applications, such as REDCap, are the fastest to process, but we will work with you on most formats.
                  </p>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="SEQ"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="SEQ"
                    />
                    <i
                      aria-hidden="true"
                      class="black dna large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Sequencing Manifest
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Tabular files (e.g. CSV, TSV, Excel) containing the biospecimen identifiers and the associated genomic data files. Typically provided by the sequencing center.
                  </p>
                </div>
              </div>
            </div>
            <div
              class="field"
            >
              <div
                class="ui compact segment selectionRadio--card"
              >
                <div>
                  <div
                    class="ui radio checkbox"
                  >
                    <input
                      class="hidden"
                      id="OTH"
                      name="file_type"
                      readonly=""
                      tabindex="0"
                      type="radio"
                      value="OTH"
                    />
                    <i
                      aria-hidden="true"
                      class="black question large bordered circular inverted icon"
                    />
                  </div>
                </div>
                <div>
                  <p
                    class="mb-5"
                  >
                    <b>
                      Other
                    </b>
                  </p>
                  <p
                    class="text-wrap-75 text-grey"
                  >
                    Any useful documents, such as study background information, data dictionaries, etc., that does not clearly fit in the other categories.
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="required field"
          >
            <label>
              Describe Document Contents:
            </label>
            <textarea
              data-testid="description-input"
              name="file_desc"
              rows="3"
              type="text"
            >
              description
            </textarea>
          </div>
          <div
            class="ui basic compact vertical segment"
          >
            <button
              class="ui right floated button"
              type="submit"
            >
              UPLOAD
            </button>
            <button
              class="ui primary right floated button"
            >
              CANCEL
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
